--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
 		<title>Cards</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="container">
+			<div class="card">
+				<img src="./assets/pasta1.jpg" class="card-img" alt="" />
+				<h2 class="card-title">Carbonara</h2>
+			</div>
+			<div class="card">
+				<img src="./assets/pasta2.jpg" class="card-img" alt="" />
+				<h2 class="card-title">Tomato</h2>
+			</div>
+			<div class="card">
+				<img src="./assets/pasta3.jpg" class="card-img" alt="" />
+				<h2 class="card-title">Alfredo</h2>
+			</div>
+		</div>
+	</body>
 </html>
